syntax = "proto3";

option java_package = "letterFormatting";
option java_multiple_files = true;
option java_outer_classname = "LetterFormatting";

package letterFormatting;

message LetterFormatRequest {
    bool toUpper = 1;
    string text = 2;
}

message LetterFormatResponse {
    string text = 1;
}

service LetterFormatter {
    rpc formatLetters(LetterFormatRequest) returns(LetterFormatResponse) {}
}
